--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hamburger-react": "^2.5.0",
     "next": "13.0.1",
+    "next-seo": "^5.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
